--- a/New Unity Project/New Unity Project.CSharp.csproj
+++ b/New Unity Project/New Unity Project.CSharp.csproj
@@ -64,6 +64,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\changeColor.cs" />
+    <Compile Include="Assets\move.cs" />
+    <Compile Include="Assets\rotate.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
 </Project>
